# NyayaGPT

./: .gitignore  env.example  main.py  pyproject.toml
config/: config.py
scripts/: batch_upload.py  clear_and_upload.py  clear_collection.py  explore_db.py  migrate_to_cloud.py  migrate_to_pinecone.py  setup_google_api.py  setup_pinecone.py  test_batch_logic.py  test_cloud.py  test_pinecone.py  test_rag_agent.py
utils/: __init__.py  chat_interface.py  chunker.py  cloud_storage.py  embedder.py  logger.py  pinecone_storage.py  rag_agent.py  storage.py  validators.py
